interpreter/Parser.cpp
//Ahmed Hussein
//ahussei4@jhu.edu

#include "Parser.h"
#include "stdio.h"

namespace DraftCompiler
{
	Parser::Parser()
	{
		Initialize();
	}
	Parser::Parser(const Parser& oParser)
	{
		*this = oParser;
	}
	Parser::~Parser()
	{
		Reset();
	}
	Parser& Parser::operator=(const Parser& oParser)
	{
		Reset();
		unsigned int i = 0;
		unsigned int iSize = (unsigned int)oParser.m_vpoTokens.size();
		m_vpoTokens.resize(iSize);
		for(i = 0 ; i < iSize ; i++)
		{
			m_vpoTokens[i] = new Token(*(oParser.m_vpoTokens[i]));
		}
		m_iTokensCount = iSize;
		//m_oLatestAction = oParser.m_oLatestAction;
		//m_lpoObservers = oParser.m_lpoObservers;
		//m_loErrors = oParser.m_loErrors;
		//m_iLatestErrorTokenIndex = oParser.m_iLatestErrorTokenIndex;
		//m_bLastErrorLocked = oParser.m_bLastErrorLocked;
		//m_bParsingProcedureInstructions = oParser.m_bParsingProcedureInstructions;
		return *this;
	}
	void Parser::Reset()
	{
		ClearTokens();
		//m_oLatestAction.Reset();
		//m_lpoObservers.clear();
		//m_loErrors.clear();
		//m_iLatestErrorTokenIndex = 0;
		//m_bLastErrorLocked = false;
	}
	void Parser::ClearTokens()
	{
		unsigned int i = 0;
		unsigned int iSize = (unsigned int)m_vpoTokens.size();
		for(i = 0 ; i < iSize ; i++)
		{
			if(m_vpoTokens[i] != NULL)
			{
				delete m_vpoTokens[i];
			}
		}
		m_vpoTokens.clear();
		m_iTokensCount = 0;
		m_iPosition = 0;
	}
	void Parser::SetTokens(vector<Token*>* pvpoTokens)
	{
		Reset();
		//m_oLatestAction.Reset();
		unsigned int i = 0;
		unsigned int iSize = (unsigned int)pvpoTokens->size();
		m_vpoTokens.resize(iSize);
		for(i = 0 ; i < iSize ; i++)
		{
			m_vpoTokens[i] = pvpoTokens->at(i);
		}
		m_iTokensCount = iSize;
	}
	bool Parser::Parse()
	{
		// make sure that the scanner is set to scan from the beginning of the source code
		m_iPosition = 0;
		//return ParseProgram();
		TreeNode<Token*>* poCSTree = ParseProgram(0);
		if(poCSTree == NULL)
		{
			return false;
		}
		PrintCST(poCSTree);
		poCSTree->DeleteChildren();
		delete poCSTree;
		return true;
	}
	/*void Parser::AddObserver(ParserObserver* poObserver)
	{
		m_lpoObservers.push_back(poObserver);
	}
	void Parser::RemoveObserver(ParserObserver* poObserver)
	{
		// remove any observers on the list having the same pointer
		list<ParserObserver*>::iterator liObservers = m_lpoObservers.begin();
		while(liObservers != m_lpoObservers.end())
		{
			if((*liObservers) == poObserver)
			{
				liObservers = m_lpoObservers.erase(liObservers);
			}
			else
			{
				liObservers++;
			}
		}
	}
	ParseTreeAction* Parser::GetLatestAction()
	{
		return &m_oLatestAction;
	}*/
	void Parser::Initialize()
	{
		m_vpoTokens.clear();
		m_iTokensCount = 0;
		m_iPosition = 0;
		//m_oLatestAction.Reset();
		//m_lpoObservers.clear();
		//m_loErrors.clear();
		//m_iLatestErrorTokenIndex = 0;
		//m_bLastErrorLocked = false;
		//m_bParsingProcedureInstructions = false;
	}
	/*void Parser::NotifyObservers()
	{
		list<ParserObserver*>::iterator liObservers;
		for(liObservers = m_lpoObservers.begin() ; liObservers != m_lpoObservers.end() ; liObservers++)
		{
			(*liObservers)->Update();
		}
	}
	void Parser::AddStartAction(const string& sString)
	{
		m_oLatestAction.SetType(StartNonTerminalAction);
		m_oLatestAction.SetString(sString);
		NotifyObservers();
	}
	void Parser::AddMatchAction(Token* poToken)
	{
		m_oLatestAction.SetType(MatchTerminalAction);
		m_oLatestAction.SetString(poToken->GeneratePrintString());
		m_oLatestAction.SetToken(poToken);
		NotifyObservers();
		IncrementPosition();
	}
	void Parser::AddEndAction(const string& sString)
	{
		m_oLatestAction.SetType(EndNonTerminalAction);
		m_oLatestAction.SetString(sString);
		NotifyObservers();
	}
	void Parser::AddRetractAction()
	{
		m_oLatestAction.SetType(RetractAction);
		m_oLatestAction.SetString("");
		NotifyObservers();
		DecrementPosition();
	}
	void Parser::AddRetractAndGoUpAction()
	{
		m_oLatestAction.SetType(RetractAndGoUpAction);
		m_oLatestAction.SetString("");
		NotifyObservers();
	}*/
	Token* Parser::GetToken(const int& iOffset)
	{
		if(iOffset == 0)
		{
			// looking for the current token
			return m_vpoTokens[m_iPosition];
		}
		if(iOffset > 0)
		{
			// looking for a token ahead
			if((m_iPosition + iOffset) >= m_iTokensCount)
			{
				return m_vpoTokens[m_iTokensCount - 1];
			}
			else
			{
				return m_vpoTokens[m_iPosition + iOffset];
			}
		}
		if(iOffset < 0)
		{
			// looking for a past token
			if((m_iPosition - iOffset) < 0)
			{
				return m_vpoTokens[0];
			}
			else
			{
				return m_vpoTokens[m_iPosition - iOffset];
			}
		}
	}
	void Parser::IncrementPosition(const unsigned int& iOffset)
	{
		if(m_iPosition < (m_iTokensCount - iOffset - 1))
		{
			m_iPosition = m_iPosition + iOffset;
		}
		else
		{
			m_iPosition = m_iTokensCount - 1;
		}
	}
	void Parser::DecrementPosition(const unsigned int& iOffset)
	{
		if(m_iPosition > iOffset)
		{
			m_iPosition = m_iPosition - iOffset;
		}
		else
		{
			m_iPosition = 0;
		}
	}
	void Parser::SetPosition(const unsigned int& iPosition)
	{
		if(iPosition < 0)
		{
			m_iPosition = 0;
		}
		else if(m_iPosition > (m_iTokensCount - 1))
		{
			m_iPosition = m_iTokensCount - 1;
		}
		else
		{
			m_iPosition = iPosition;
		}
	}
	/*ParserError* Parser::GetLatestError()
	{
		if(m_loErrors.empty())
		{
			return NULL;
		}
		return &(m_loErrors.back());
	}
	void Parser::FlagError(const ParserErrorType& eType,const string& sErrorString)
	{
// 		if((eType != STGenerationError) && (eType != ASTGenerationError))
// 		{
// 			if(m_iLatestErrorTokenIndex != 0)
// 			{
// 				if((m_iPosition - m_iLatestErrorTokenIndex) < ErrorTokenSkipDistance)
// 				{
// 					m_bLastErrorLocked = true;
// 					return;
// 				}
// 			}
// 		}
// 		else
// 		{
//			m_bLastErrorLocked = true;
// 		}
		AddError(eType,sErrorString);
	}
	void Parser::AddError(const ParserErrorType& eType,const string& sErrorString)
	{
		ParserError oError(eType,sErrorString);
		oError.SetPosition(GetPreviousToken()->GetEndPosition());
// 		if((eType != STGenerationError) && (eType != ASTGenerationError))
// 		{
// 			m_iLatestErrorTokenIndex = m_iPosition;
// 			m_bLastErrorLocked = false;
// 		}
		m_loErrors.push_back(oError);
	}
	bool Parser::DropLastError()
	{
		// make sure that we are not removing a different error
// 		if(m_bLastErrorLocked)
// 		{
// 			return false;
// 		}
		if(!m_loErrors.empty())
		{
			m_loErrors.pop_back();
// 			if(!m_loErrors.empty())
// 			{
// 				m_iLatestErrorTokenIndex = m_loErrors.back().GetPosition();
// 			}
// 			else
// 			{
// 				m_iLatestErrorTokenIndex = 0;
// 			}
		}
		return true;
	}
	list<ParserError>* Parser::GetErrors()
	{
		return &m_loErrors;
	}
	bool Parser::SeekToNextStrongToken()
	{
		TokenKind eKind = NullTokenKind;
		while(m_iPosition < (m_iTokensCount - 1))
		{
			eKind = GetCurrentToken()->GetKind();
			if((eKind == ConstToken) || (eKind == TypeToken) || (eKind == VarToken) || (eKind == ProcedureToken) || 
			(eKind == IfToken) || (eKind == RepeatToken) || (eKind == WhileToken) || (eKind == WriteToken)
			|| (eKind == ReadToken) || (eKind == ProcedureToken))
			{
				return true;
			}
			else
			{
				IncrementPosition();
			}
		}
		return false;
	}*/
	TreeNode<Token*>* Parser::ParseReal(const unsigned int& iLevel)
	{
		// real = integer "." integer [ScaleFactor].
		Token* poLeadingIntegerToken = GetToken();
		Token* poPeriodToken = GetToken(1);
		Token* poTrailingIntegerToken = GetToken(2);
		if(poLeadingIntegerToken->GetKind() != IntegerToken)	return NULL;
		if(poPeriodToken->GetKind() != PeriodToken)				return NULL;
		if(poTrailingIntegerToken->GetKind() != IntegerToken)	return NULL;
		// now we have a real number, increment the position
		IncrementPosition(3);
		// build the tree
		TreeNode<Token*>* poRealNode = new TreeNode<Token*>;
		poRealNode->SetLevel(iLevel);
		poRealNode->SetLabel("Real");
		
		TreeNode<Token*>* poLeadingIntegerNode = new TreeNode<Token*>;
		poLeadingIntegerNode->SetLevel(iLevel + 1);
		poLeadingIntegerNode->SetData(poLeadingIntegerToken);
		poLeadingIntegerNode->SetLabel(poLeadingIntegerToken->GeneratePrintString());
		poLeadingIntegerNode->SetLeaf(true);
		poRealNode->AddChild(poLeadingIntegerNode);
		poLeadingIntegerNode->SetParent(poRealNode);
		
		TreeNode<Token*>* poPeriodNode = new TreeNode<Token*>;
		poPeriodNode->SetLevel(iLevel + 1);
		poPeriodNode->SetData(poPeriodToken);
		poPeriodNode->SetLabel(poPeriodToken->GeneratePrintString());
		poPeriodNode->SetLeaf(true);
		poRealNode->AddChild(poPeriodNode);
		poPeriodNode->SetParent(poRealNode);
		
		TreeNode<Token*>* poTrailingIntegerNode = new TreeNode<Token*>;
		poTrailingIntegerNode->SetLevel(iLevel + 1);
		poTrailingIntegerNode->SetData(poTrailingIntegerToken);
		poTrailingIntegerNode->SetLabel(poTrailingIntegerToken->GeneratePrintString());
		poTrailingIntegerNode->SetLeaf(true);
		poRealNode->AddChild(poTrailingIntegerNode);
		poTrailingIntegerNode->SetParent(poRealNode);
		
		// optionally, there is a scale factor, try to parse it
		TreeNode<Token*>* poScaleFactor = ParseScaleFactor(iLevel + 1);
		if(poScaleFactor != NULL)
		{
			// add it to the real node
			poRealNode->AddChild(poScaleFactor);
			poScaleFactor->SetParent(poRealNode);
		}
		// return it
		return poRealNode;
	}
	TreeNode<Token*>* Parser::ParseScaleFactor(const unsigned int& iLevel)
	{
		// ScaleFactor = "e" ("+" | "-") integer.
		Token* poExponentToken = GetToken();
		Token* poSignToken = GetToken(1);
		Token* poIntegerToken = GetToken(2);
		if(poExponentToken->GetKind() != ExponentEToken)	return NULL;
		if((poSignToken->GetKind() != PlusToken) && (poSignToken->GetKind() != MinusToken))			return NULL;
		if(poIntegerToken->GetKind() != IntegerToken)		return NULL;
		
		// now we have a full scale factor, increment the position first
		IncrementPosition(3);
		// build the tree
		TreeNode<Token*>* poScaleFactorNode = new TreeNode<Token*>;
		poScaleFactorNode->SetLevel(iLevel);
		poScaleFactorNode->SetLabel("ScaleFactor");
		
		TreeNode<Token*>* poExponentNode = new TreeNode<Token*>;
		poExponentNode->SetLevel(iLevel + 1);
		poExponentNode->SetData(poExponentToken);
		poExponentNode->SetLabel(poExponentToken->GeneratePrintString());
		poExponentNode->SetLeaf(true);
		poScaleFactorNode->AddChild(poExponentNode);
		poExponentNode->SetParent(poScaleFactorNode);
		
		TreeNode<Token*>* poSignNode = new TreeNode<Token*>;
		poSignNode->SetLevel(iLevel + 1);
		poSignNode->SetData(poSignToken);
		poSignNode->SetLabel(poSignToken->GeneratePrintString());
		poSignNode->SetLeaf(true);
		poScaleFactorNode->AddChild(poSignNode);
		poSignNode->SetParent(poScaleFactorNode);
		
		TreeNode<Token*>* poIntegerNode = new TreeNode<Token*>;
		poIntegerNode->SetLevel(iLevel + 1);
		poIntegerNode->SetData(poIntegerToken);
		poIntegerNode->SetLabel(poIntegerToken->GeneratePrintString());
		poIntegerNode->SetLeaf(true);
		poScaleFactorNode->AddChild(poIntegerNode);
		poIntegerNode->SetParent(poScaleFactorNode);
		
		// return it
		return poScaleFactorNode;	
	}
	TreeNode<Token*>* Parser::ParseNumber(const unsigned int& iLevel)
	{
		// number = integer | real.
		Token* poToken = GetToken();
		if(poToken->GetKind() != IntegerToken)			return NULL;
		poToken = GetToken(1);
		TreeNode<Token*>* poSubNode = NULL;
		if(poToken->GetKind() == PeriodToken)
		{
			poSubNode = ParseReal(iLevel + 1);
			if(poSubNode == NULL)							return NULL;
		}
		else
		{	
			poToken = GetToken();
			IncrementPosition();
			poSubNode = new TreeNode<Token*>;
			poSubNode->SetLevel(iLevel + 1);
			poSubNode->SetData(poToken);
			poSubNode->SetLabel(poToken->GeneratePrintString());
			poSubNode->SetLeaf(true);
		}
		TreeNode<Token*>* poNumberNode = new TreeNode<Token*>;
		poNumberNode->SetLevel(iLevel);
		poNumberNode->SetLabel("Number");
		poNumberNode->AddChild(poSubNode);
		poSubNode->SetParent(poNumberNode);	
		return poNumberNode;
	}
	TreeNode<Token*>* Parser::ParseFactor(const unsigned int& iLevel)
	{
		// factor = number | "null" | "true" | "false" | designator [ActualParameters] | "(" expression ")" | "not" factor.
		unsigned int iOriginalPosition = m_iPosition;
		Token* poToken = GetToken();
		TokenKind eKind = poToken->GetKind();
		TreeNode<Token*>* poFactorNode = NULL;
		TreeNode<Token*>* poSubNode = NULL;
		// check for the easy cases first
		if((eKind == NullToken) || (eKind == TrueToken) || (eKind == FalseToken))
		{
			IncrementPosition();
			poSubNode = new TreeNode<Token*>;
			poSubNode->SetLevel(iLevel + 1);
			poSubNode->SetData(poToken);
			poSubNode->SetLabel(poToken->GeneratePrintString());
			poSubNode->SetLeaf(true);
			
			poFactorNode = new TreeNode<Token*>;
			poFactorNode->SetLevel(iLevel);
			poFactorNode->SetLabel("Factor");
			poFactorNode->AddChild(poSubNode);
			poSubNode->SetParent(poFactorNode);
		}
		else if(eKind == NotToken)
		{
			IncrementPosition();
			// try to parse a factor
			poSubNode = ParseFactor(iLevel + 1);
			if(poSubNode == NULL)
			{
				m_iPosition = iOriginalPosition;
				return NULL;
			}
			// factor parsed and its tree node created, create a not node and
			// add both to the factor node
			TreeNode<Token*>* poNotNode = new TreeNode<Token*>;
			poNotNode->SetLevel(iLevel + 1);
			poNotNode->SetData(poToken);
			poNotNode->SetLabel(poToken->GeneratePrintString());
			poNotNode->SetLeaf(true);
			
			poFactorNode = new TreeNode<Token*>;
			poFactorNode->SetLevel(iLevel);
			poFactorNode->SetLabel("Factor");
			poFactorNode->AddChild(poNotNode);
			poFactorNode->AddChild(poSubNode);
			poNotNode->SetParent(poFactorNode);
			poSubNode->SetParent(poFactorNode);
		}
		else if(eKind == RoundBracketOpenToken)
		{
			IncrementPosition();
			// try to parse an expression
			poSubNode = ParseExpression(iLevel + 1);
			if(poSubNode == NULL)
			{
				m_iPosition = iOriginalPosition;
				return NULL;
			}
			// expression parsed and its tree node created, 
			// make sure that we have the closing bracket
			Token* poClosingBracketToken = GetToken();
			if(poToken->GetKind() != RoundBracketCloseToken)
			{
				// failed to find a closing bracket, delete the expression node
				m_iPosition = iOriginalPosition;
				poSubNode->DeleteChildren();
				delete poSubNode;
				return NULL;
			}
			IncrementPosition();
			// now we have everything we need, create the subtree
			TreeNode<Token*>* poOpenBracketNode = new TreeNode<Token*>;
			poOpenBracketNode->SetLevel(iLevel + 1);
			poOpenBracketNode->SetData(poToken);
			poOpenBracketNode->SetLabel(poToken->GeneratePrintString());
			poOpenBracketNode->SetLeaf(true);
			
			TreeNode<Token*>* poCloseBracketNode = new TreeNode<Token*>;
			poCloseBracketNode->SetLevel(iLevel + 1);
			poCloseBracketNode->SetData(poClosingBracketToken);
			poCloseBracketNode->SetLabel(poClosingBracketToken->GeneratePrintString());
			poCloseBracketNode->SetLeaf(true);
			
			poFactorNode = new TreeNode<Token*>;
			poFactorNode->SetLevel(iLevel);
			poFactorNode->SetLabel("Factor");
			poFactorNode->AddChild(poOpenBracketNode);
			poFactorNode->AddChild(poSubNode);
			poFactorNode->AddChild(poCloseBracketNode);
			poOpenBracketNode->SetParent(poFactorNode);
			poSubNode->SetParent(poFactorNode);
			poCloseBracketNode->SetParent(poFactorNode);
		}
		else if(eKind == IdentifierToken)
		{
			// a designator begins with an identifier, check to see whether we have
			// this as the first token, if so, try to parse it
			poSubNode = ParseDesignator(iLevel + 1);
			if(poSubNode == NULL)
			{
				m_iPosition = iOriginalPosition;
				return NULL;
			}
			// now that we have a designator and a properly incremented position, 
			// try to parse the optional actual parameters
			TreeNode<Token*>* poActualParametersNode = ParseActualParameters(iLevel + 1);
			
			poFactorNode = new TreeNode<Token*>;
			poFactorNode->SetLevel(iLevel);
			poFactorNode->SetLabel("Factor");
			poFactorNode->AddChild(poSubNode);
			poSubNode->SetParent(poFactorNode);
			if(poActualParametersNode != NULL)
			{
				poFactorNode->AddChild(poActualParametersNode);
				poActualParametersNode->SetParent(poFactorNode);
			}
		}
		else
		{
			poSubNode = ParseNumber(iLevel + 1);
			if(poSubNode == NULL)
			{
				m_iPosition = iOriginalPosition;
				return NULL;
			}
			
			poFactorNode = new TreeNode<Token*>;
			poFactorNode->SetLevel(iLevel);
			poFactorNode->SetLabel("Factor");
			poFactorNode->AddChild(poSubNode);
			poSubNode->SetParent(poFactorNode);
		}
		
		return poFactorNode;
	}
	TreeNode<Token*>* Parser::ParseTerm(const unsigned int& iLevel)
	{
		// term = factor {MulOperator factor}.
		unsigned int iOriginalPosition = m_iPosition;
		TreeNode<Token*>* poFactor = ParseFactor(iLevel + 1);
		if(poFactor == NULL)
		{
			m_iPosition = iOriginalPosition;
			return NULL;
		}
		
		list<TreeNode<Token*>*> lpoFactors;
		lpoFactors.push_back(poFactor);
		list<TreeNode<Token*>*> lpoMulOps;
		Token* poMulOpToken = NULL;
		TreeNode<Token*>* poMulOpNode = NULL;
		TokenKind eKind = NullTokenKind;
		while(true)
		{
			poMulOpToken = GetToken();
			eKind = poMulOpToken->GetKind();
			if((eKind != MultiplyToken) && (eKind != DivideToken) && (eKind != IntegerDivideToken) && (eKind != ModulusDivideToken) && (eKind != AndToken))
			{
				break;
			}
			IncrementPosition();
			poFactor = ParseFactor(iLevel + 1);
			if(poFactor == NULL)
			{
				// reset position
				m_iPosition = iOriginalPosition;
				// delete all created nodes
				while(!lpoFactors.empty())
				{
					poFactor = lpoFactors.front();
					if(poFactor != NULL)	
					{
						poFactor->DeleteChildren();
						delete poFactor;
					}
					lpoFactors.pop_front();
				}
				while(!lpoMulOps.empty())
				{
					poMulOpNode = lpoMulOps.front();
					if(poMulOpNode != NULL)
					{
						poMulOpNode->DeleteChildren();
						delete poMulOpNode;
					}
					lpoMulOps.pop_front();
				}
				return NULL;
			}
			// found a multiplicative operator followed by a factor, push them into the lists
			poMulOpNode = new TreeNode<Token*>;
			poMulOpNode->SetLevel(iLevel + 1);
			poMulOpNode->SetData(poMulOpToken);
			poMulOpNode->SetLabel(poMulOpToken->GeneratePrintString());
			poMulOpNode->SetLeaf(true);
			lpoMulOps.push_back(poMulOpNode);
			lpoFactors.push_back(poFactor);
		}
		// now we have a list of factor nodes and a list of mulop  nodes
		// position has been properly incremented
		// create the tree
		TreeNode<Token*>* poTermNode = new TreeNode<Token*>;
		poTermNode->SetLevel(iLevel);
		poTermNode->SetLabel("Term");
		// add the first expression to the parent node
		poFactor = lpoFactors.front();
		lpoFactors.pop_front();
		poTermNode->AddChild(poFactor);
		poFactor->SetParent(poTermNode);
		// add the rest of the factors and the mulops to the parent node
		while(!lpoFactors.empty())
		{
			poMulOpNode = lpoMulOps.front();
			lpoMulOps.pop_front();
			poTermNode->AddChild(poMulOpNode);
			poMulOpNode->SetParent(poTermNode);
			
			poFactor = lpoFactors.front();
			lpoFactors.pop_front();
			poTermNode->AddChild(poFactor);
			poFactor->SetParent(poTermNode);
		}
		return poTermNode;
	}
	TreeNode<Token*>* Parser::ParseSimpleExpression(const unsigned int& iLevel)
	{
		// SimpleExpression = ["+" | "-"] term {AddOperator term}.
		unsigned int iOriginalPosition = m_iPosition;
		// look for a leading sign
		bool bLeadingSignFound = false;
		Token* poLeadingSignToken = GetToken();
		if((poLeadingSignToken->GetKind() == PlusToken) || (poLeadingSignToken->GetKind() == MinusToken))
		{
			bLeadingSignFound = true;
			IncrementPosition();
		}
		TreeNode<Token*>* poTerm = ParseTerm(iLevel + 1);
		if(poTerm == NULL)
		{
			m_iPosition = iOriginalPosition;
			return NULL;
		}
		
		list<TreeNode<Token*>*> lpoTerms;
		lpoTerms.push_back(poTerm);
		list<TreeNode<Token*>*> lpoAddOps;
		Token* poAddOpToken = NULL;
		TreeNode<Token*>* poAddOpNode = NULL;
		TokenKind eKind = NullTokenKind;
		while(true)
		{
			poAddOpToken = GetToken();
			eKind = poAddOpToken->GetKind();
			if((eKind != PlusToken) && (eKind != MinusToken) && (eKind != OrToken))
			{
				break;
			}
			IncrementPosition();
			poTerm = ParseTerm(iLevel + 1);
			if(poTerm == NULL)
			{
				// reset position
				m_iPosition = iOriginalPosition;
				// delete all created nodes
				while(!lpoTerms.empty())
				{
					poTerm = lpoTerms.front();
					if(poTerm != NULL)
					{
						poTerm->DeleteChildren();
						delete poTerm;
					}
					lpoTerms.pop_front();
				}
				while(!lpoAddOps.empty())
				{
					poAddOpNode = lpoAddOps.front();
					if(poAddOpNode != NULL)
					{
						poAddOpNode->DeleteChildren();
						delete poAddOpNode;
					}
					lpoAddOps.pop_front();
				}
				return NULL;
			}
			// found an additive operator followed by a term, push them into the lists
			poAddOpNode = new TreeNode<Token*>;
			poAddOpNode->SetLevel(iLevel + 1);
			poAddOpNode->SetData(poAddOpToken);
			poAddOpNode->SetLabel(poAddOpToken->GeneratePrintString());
			poAddOpNode->SetLeaf(true);
			lpoAddOps.push_back(poAddOpNode);
			lpoTerms.push_back(poTerm);
		}
		// now we have a list of term nodes and a list of addop  nodes
		// position has been properly incremented
		// create the tree
		TreeNode<Token*>* poSimpleExpressionNode = new TreeNode<Token*>;
		poSimpleExpressionNode->SetLevel(iLevel);
		poSimpleExpressionNode->SetLabel("SimpleExpression");
		// add the leading sign if found
		if(bLeadingSignFound)
		{
			TreeNode<Token*>* poSignNode = new TreeNode<Token*>;
			poSignNode->SetLevel(iLevel + 1);
			poSignNode->SetData(poLeadingSignToken);
			poSignNode->SetLabel(poLeadingSignToken->GeneratePrintString());
			poSignNode->SetLeaf(true);
			poSimpleExpressionNode->AddChild(poSignNode);
			poSignNode->SetParent(poSimpleExpressionNode);
		}
		// add the first expression to the parent node
		poTerm = lpoTerms.front();
		lpoTerms.pop_front();
		poSimpleExpressionNode->AddChild(poTerm);
		poTerm->SetParent(poSimpleExpressionNode);
		// add the rest of the expressions and the addops to the parent node
		while(!lpoTerms.empty())
		{
			poAddOpNode = lpoAddOps.front();
			lpoAddOps.pop_front();
			poSimpleExpressionNode->AddChild(poAddOpNode);
			poAddOpNode->SetParent(poSimpleExpressionNode);
			
			poTerm = lpoTerms.front();
			lpoTerms.pop_front();
			poSimpleExpressionNode->AddChild(poTerm);
			poTerm->SetParent(poSimpleExpressionNode);
		}
		return poSimpleExpressionNode;
	}
	TreeNode<Token*>* Parser::ParseExpression(const unsigned int& iLevel)
	{
		// expression = SimpleExpression [relation SimpleExpression].
		unsigned int iOriginalPosition = m_iPosition;
		TreeNode<Token*>* poFirstExpression = ParseSimpleExpression(iLevel + 1);
		if(poFirstExpression == NULL)
		{
			m_iPosition = iOriginalPosition;
			return NULL;
		}
		TreeNode<Token*>* poExpressionNode = new TreeNode<Token*>;
		poExpressionNode->SetLevel(iLevel);
		poExpressionNode->SetLabel("Expression");
		poExpressionNode->AddChild(poFirstExpression);
		poFirstExpression->SetParent(poExpressionNode);
		
		// look for the optional second expression
		Token* poRelOpToken = GetToken();
		TokenKind eKind = poRelOpToken->GetKind();
		if((eKind == EqualToken) || (eKind == NotEqualToken) || (eKind == LessThanToken) || (eKind == GreaterThanToken) || (eKind == LessThanOrEqualToken) || (eKind == GreaterThanOrEqualToken))
		{
			// look for the second expression
			IncrementPosition();
			TreeNode<Token*>* poSecondExpression = ParseSimpleExpression(iLevel + 1);
			if(poSecondExpression == NULL)
			{
				m_iPosition = iOriginalPosition;
				poExpressionNode->DeleteChildren();
				delete poExpressionNode;
				return NULL;
			}
		
			TreeNode<Token*>* poRelOpNode = new TreeNode<Token*>;
			poRelOpNode->SetLevel(iLevel + 1);
			poRelOpNode->SetData(poRelOpToken);
			poRelOpNode->SetLabel(poRelOpToken->GeneratePrintString());
			poRelOpNode->SetLeaf(true);
			poExpressionNode->AddChild(poRelOpNode);
			poRelOpNode->SetParent(poExpressionNode);
			
			poExpressionNode->AddChild(poSecondExpression);
			poSecondExpression->SetParent(poExpressionNode);
		}
		
		return poExpressionNode;
	}
	TreeNode<Token*>* Parser::ParseQualifiedIdentifier(const unsigned int& iLevel)
	{
		// qualident = [ident "."] ident.
		Token* poFirstIdentifier = GetToken();
		if(poFirstIdentifier->GetKind() != IdentifierToken)		return NULL;
		Token* poPeriodToken = GetToken(1);
		TreeNode<Token*>* poQualifiedIdentifierNode = NULL;
		if(poPeriodToken->GetKind() == PeriodToken)
		{
			Token* poSecondIdentifier = GetToken(2);
			if(poSecondIdentifier->GetKind() != IdentifierToken)	return NULL;
			IncrementPosition(3);
			
			TreeNode<Token*>* poFirstIdentifierNode = new TreeNode<Token*>;
			poFirstIdentifierNode->SetLevel(iLevel + 1);
			poFirstIdentifierNode->SetData(poFirstIdentifier);
			poFirstIdentifierNode->SetLabel(poFirstIdentifier->GeneratePrintString());
			poFirstIdentifierNode->SetLeaf(true);
			
			TreeNode<Token*>* poPeriodNode = new TreeNode<Token*>;
			poPeriodNode->SetLevel(iLevel + 1);
			poPeriodNode->SetData(poPeriodToken);
			poPeriodNode->SetLabel(poPeriodToken->GeneratePrintString());
			poPeriodNode->SetLeaf(true);	
			
			TreeNode<Token*>* poSecondIdentifierNode = new TreeNode<Token*>;
			poSecondIdentifierNode->SetLevel(iLevel + 1);
			poSecondIdentifierNode->SetData(poSecondIdentifier);
			poSecondIdentifierNode->SetLabel(poSecondIdentifier->GeneratePrintString());
			poSecondIdentifierNode->SetLeaf(true);
			
			poQualifiedIdentifierNode = new TreeNode<Token*>;
			poQualifiedIdentifierNode->SetLevel(iLevel);
			poQualifiedIdentifierNode->SetLabel("QualifiedIdentifier");
			poQualifiedIdentifierNode->AddChild(poFirstIdentifierNode);
			poQualifiedIdentifierNode->AddChild(poPeriodNode);
			poQualifiedIdentifierNode->AddChild(poSecondIdentifierNode);
			poFirstIdentifierNode->SetParent(poQualifiedIdentifierNode);
			poPeriodNode->SetParent(poQualifiedIdentifierNode);
			poSecondIdentifierNode->SetParent(poQualifiedIdentifierNode);
		}
		else
		{
			IncrementPosition();
			TreeNode<Token*>* poSubNode = new TreeNode<Token*>;
			poSubNode->SetLevel(iLevel + 1);
			poSubNode->SetData(poFirstIdentifier);
			poSubNode->SetLabel(poFirstIdentifier->GeneratePrintString());
			poSubNode->SetLeaf(true);	
			
			poQualifiedIdentifierNode = new TreeNode<Token*>;
			poQualifiedIdentifierNode->SetLevel(iLevel);
			poQualifiedIdentifierNode->SetLabel("QualifiedIdentifier");
			poQualifiedIdentifierNode->AddChild(poSubNode);
			poSubNode->SetParent(poQualifiedIdentifierNode);
		}
		
		return poQualifiedIdentifierNode;
	}
	TreeNode<Token*>* Parser::ParseExpressionList(const unsigned int& iLevel)
	{
		// ExpList = expression {"," expression}.
		unsigned int iOriginalPosition = m_iPosition;
		TreeNode<Token*>* poExpressionNode = ParseExpression(iLevel + 1);
		if(poExpressionNode == NULL)
		{
			m_iPosition = iOriginalPosition;
			return NULL;
		}
		list<TreeNode<Token*>*> lpoExpressions;
		lpoExpressions.push_back(poExpressionNode);
		list<TreeNode<Token*>*> lpoCommaNodes;
		Token* poCommaToken = NULL;
		TreeNode<Token*>* poCommaNode = NULL;
		while(true)
		{
			poCommaToken = GetToken();
